<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RegisterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/screen_margin_double"
    android:paddingRight="@dimen/screen_margin_double"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/register_Logo"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/tastylogo"
        app:tint="?android:attr/colorPrimary"
        android:layout_marginBottom="@dimen/register_form_spacing"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/orangy_gray"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/orangy_gray"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_name"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@color/orangy_gray"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layoutPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@color/orangy_gray"
        android:layout_marginBottom="@dimen/register_form_spacing"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_inputPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_cpwd"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_buttonSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_item_spacing"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:text="@string/cadUser_btnCad" />

    <ProgressBar
        android:id="@+id/register_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_marginBottom="@dimen/login_item_spacing"
        android:layout_width="@dimen/progressBarButtonSize"
        android:layout_height="@dimen/progressBarButtonSize"
        android:indeterminateTint="?android:attr/colorPrimary"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/register_linkLoginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_loginPrefix"/>

        <TextView
            android:id="@+id/register_linkLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/linkGap"
            android:textStyle="bold"
            android:textColor="?android:attr/colorPrimary"
            android:text="@string/register_login"
            android:selectAllOnFocus="false"
            android:linksClickable="false"
            android:autoLink="all"/>

    </LinearLayout>


</LinearLayout>