<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_margin"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/newRecipe_buttonPickImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/newRecipe_imageDisplayHeight"
            android:scaleType="fitCenter"
            android:layout_marginBottom="@dimen/newRecipe_form_item_spacing"
            android:src="@drawable/outline_image_24"
            app:backgroundTint="@android:color/transparent"
            app:tint="?android:attr/colorPrimary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newRecipe_layoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/orangy_gray"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newRecipe_inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newRecipe_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newRecipe_layoutIngredients"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/orangy_gray"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newRecipe_inputIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:minLines="3"
                android:hint="@string/newRecipe_ingredients"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newRecipe_layoutSteps"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/orangy_gray"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newRecipe_inputSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:minLines="6"
                android:hint="@string/newRecipe_steps"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/newRecipe_buttonFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:text="@string/newRecipe_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/newRecipe_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/progressBarButtonSize"
            android:layout_height="@dimen/progressBarButtonSize"
            android:indeterminateTint="?android:attr/colorPrimary"
            android:visibility="gone"/>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>